<resources>
    <string name="app_name">CF</string>
    <string name="welcome">ברוכים הבאים! </string>
    <string name="welcome_text">אני CF,  ואני האפליקציה\n שתעזור לכם לנהל את היום\n בקלות ובהנאה !</string>
    <string name="welcome_button">בואו נצא לדרך</string>
    <string name="title_activity_login">Sign in</string>\
    <string name="title_fev1">FEV1</string>
    <string name="fev1_percentage">73%</string>
    <string name="save">שמור</string>
    <string name="sign_up">הרשמה</string>
    <string name="sign_in">התחברות</string>
    <string name="continue_btn">המשך</string>
    <string name="add_contacts">הוסף אנשי קשר</string>
    <string name="last_check">ביקורת אחרונה</string>
    <string name="start">אני מתחיל !</string>
    <string name="b2">והחזק</string>
    <string name="b3">3</string>
    <string name="b4">במשך</string>
    <string name="b5">שניות</string>
    <string name="b1">קח נשימה עמוקה</string>
    <string name="med">תרופות</string>
    <string name="med2">עריכת תרופה</string>
    <string name="med2name">:שם תרופה</string>
    <string name="med2amount">מינון:</string>
    <string name="med2MG">MG</string>
    <string name="addAlert">+ הוסף תזכורת</string>
    <string name="addBtn">+ הוסף</string>

    <string name="age">גיל</string>
    <string name="weight">משקל</string>
    <string name="height">גובה</string>
    <string name="maxC">יעד הקלוריות שלי</string>
    <string name="edit">עריכת פרופיל</string>

    <string-array name="planets_array">
        <item>advil</item>
        <item>orkambi</item>
        <item>orkambi</item>
        <item>nurophen</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_nutrition">Nutrition</string>

    <string name="Pactivity">פעילות גופנית</string>
    <string name="title_activity_med">med</string>
    <string name="title_activity_med_edit">medEdit</string>

    <string-array name="unit_of_measure">
        <item>100 גרם</item>
        <item>יחידה</item>
        <item>כוס</item>
    </string-array>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">navActivity</string>
</resources>
