<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_dark_backgroung"
    tools:context=".set_medicine">

    <Button
        android:id="@+id/cntBtn3"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_pink_button"
        android:onClick="continueBtnListener"
        android:text="@string/addAlert"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="431dp" />

    <Button
        android:id="@+id/cntBtn2"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="124dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_pink_button"
        android:onClick="continueBtnListener"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cntBtn3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="114dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/med2"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lungs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        tools:layout_editor_absoluteY="202dp"
        tools:text="@string/med2name" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="337dp"
        tools:layout_editor_absoluteY="289dp"
        tools:text="@string/med2amount" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/cntBtn3"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/med2MG"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="289dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="226dp"
        android:layout_height="30dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="57dp" />

</android.support.constraint.ConstraintLayout>