<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_background_blue"
    android:orientation="vertical"
    tools:context=".welcomeActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="159dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/rsz_logo_big" />

    <TextView
        android:layout_width="221dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="#4da7bc"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="166dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/round_pink_button"
        android:text="@string/welcome_button"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>