<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_dark_backgroung"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/editBtn"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:background="@drawable/round_pink_button"
        android:text="@string/edit"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="300dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/gold_med"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/textView30"
        app:layout_constraintEnd_toStartOf="@id/textView30"
        android:layout_marginRight="70dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxC"
        android:textColor="@color/gold_med"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/heightEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/gold_med"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/editBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="230dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="הפרופיל שלי"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/ageEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/heightEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/heightEdit"/>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/textView30"
        app:layout_constraintStart_toEndOf="@id/textView30"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/caloriesEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/heightEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/weightEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/gold_med"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/heightEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/heightEdit"/>

</android.support.constraint.ConstraintLayout>